Bug 148672 - Transliteration of text in parentheses
Summary: Transliteration of text in parentheses
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2022-04-19 10:27 UTC by Óvári
Modified: 2022-11-14 12:36 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Óvári 2022-04-19 10:27:51 UTC
Description:
> Regressions:
> 3. text in `(…)` is not transliterated
https://bugs.documentfoundation.org/show_bug.cgi?id=147546#c2



From https://bugs.documentfoundation.org/show_bug.cgi?id=147546

The “Old Hungarian template document with embedded Noto Old Hungarian font”[1] (from LibreOffice 7.0 Release Notes[2]) no longer transliterates punctuation marks (i.e. commas, question marks) as shown in the “Screencast demonstration”[3] with Linux Mint 20.3 Cinnamon and LibreOffice[4].

[1] Old Hungarian template document with embedded Noto Old Hungarian font 
https://wiki.documentfoundation.org/images/8/8f/Sz%C3%A9kely_%C3%ADr%C3%A1s_sablondokumentum_be%C3%A1gyazott_Noto_bet%C5%B1k%C3%A9szlettel.ott

[2] Transliteration to Old Hungarian, LibreOffice 7.0 Release Notes
https://wiki.documentfoundation.org/ReleaseNotes/7.0#Transliteration_to_Old_Hungarian

[3] Screencast demonstration
https://www.youtube.com/watch?v=w8BRhN5MZbs

[4] LibreOffice
Version: 7.3.1.1 / LibreOffice Community
Build ID: 349cd3ad57dce98d6b54b76f8e9f456ac7d7edb7
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Steps to Reproduce:
```
Székely írás 2020-ban? Egyszerű, nagyszerű!
Meggyőző (g-gy), meggyízű (gy-gy).
Vége
```

Are you able to reproduce? And please fix?

Should the following be added to this issue:
1. Add a unit test
2. Regression label

Thank you

Actual Results:
```
𐲥𐳋𐳓𐳉𐳗 𐳑𐳢𐳁𐳤 𐳺𐳺𐳿𐳼𐳼-𐳂𐳀𐳙? 𐲉𐳎𐳥𐳉𐳢𐳬, 𐳙𐳀𐳎𐳥𐳉𐳢𐳬!
𐲘𐳉𐳍𐳎𐳟𐳯𐳟 (g-gy), 𐳘𐳉𐳎𐳎𐳑𐳯𐳬 (gy-gy).
𐲮𐳋𐳍𐳉 
```

Will add a screenshot of the text above for people who don't have the font installed.

Expected Results:
[3] Screencast demonstration
https://www.youtube.com/watch?v=w8BRhN5MZbs

Steps to Reproduce:
Unable to select the version, which is:

Version: 7.3.3.1 / LibreOffice Community
Build ID: 1688991ca59a3ca1c74bc2176b274fba1b034928
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Actual Results:
Text inside parentheses is no longer being transliterated, for example:
(g-gy)
(gy-gy)



Expected Results:
Text inside parentheses should be transliterated


Reproducible: Always


User Profile Reset: No



Additional Info:
Thank you
Comment 1 László Németh 2022-11-03 21:26:06 UTC
@Óvári: many thanks for the report!

Fixed in libnumbertext (https://github.com/Numbertext/libnumbertext/commit/ee279414dea4d333e225ed7c327d362f536da991
), so the upcoming library update will fix the bug in LibreOffice, too.

Also words with ']' weren't transliterated because of a LibreOffice bug. The fix is under testing:

https://gerrit.libreoffice.org/c/core/+/142254
Comment 2 Óvári 2022-11-04 07:38:49 UTC
Thank you very much.
Comment 3 Commit Notification 2022-11-04 08:53:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/733bfd9597fc42c569c6855bb71c56429e009fa6

tdf#148672 Old Hungarian transliteration: fix "word]"

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-11-14 08:26:43 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6064b3382102bcbc153156f5874fbc8dfde97b98

tdf#115007 tdf#148672 bump libnumbertext 1.0.11

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2022-11-14 09:50:48 UTC
From the release notes of libnumbertext update:

tdf#115007 tdf#148672 bump libnumbertext 1.0.11

...

tdf#148672 fix of transliteration of parenthesized words of hu-Hung.

...

– add test for hu_Hung transliteration of parenthesized words;

...
Comment 6 Commit Notification 2022-11-14 12:35:26 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/62b402030553740b96a624434f3700446e0fbd7c

tdf#148672 Old Hungarian transliteration: fix "word]"

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-11-14 12:36:42 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/914c9743c6de1366ba4c58621988d694fbccb39e

tdf#115007 tdf#148672 bump libnumbertext 1.0.11

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.