tdf#148672 Old Hungarian transliteration: fix "word]"

Words ending with closing bracket weren't transliterated,
because NatNum12 parameters couldn't contain closing bracket.
Transliterate without the bracket, and append it to the
result.

Note: "[word]", "(word)" etc. forms will be handled
by the next libnumbertext release.

Change-Id: Id0d34267575782487819e3a3f76d1b547866e362
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142254
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>